INTERNDEMO-85 successfully made the logic for /api/empl/payment